--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 dist
-dist-*
+dist-newstyle
 cabal-dev
 *.o
 *.hi
@@ -14,6 +14,9 @@ cabal.sandbox.config
 *.prof
 *.aux
 *.hp
-*.eventlog
-.stack-work/
-cabal.project.local
+
+/*.submodules
+/.stack-work/
+/*.nix
+/*.nix.part
+/result
