--- a/hw-string-parse.cabal
+++ b/hw-string-parse.cabal
@@ -10,10 +10,10 @@ homepage:               http://github.com/haskell-works/hw-string-parse#readme
 bug-reports:            https://github.com/haskell-works/hw-string-parse/issues
 author:                 John Ky
 maintainer:             newhoggy@gmail.com
-copyright:              2016-2019 John Ky
+copyright:              2016-2020 John Ky
 license:                BSD-3-Clause
 license-file:           LICENSE
-tested-with:            GHC == 8.8.3, GHC == 8.6.5, GHC == 8.4.4, GHC == 8.2.2
+tested-with:            GHC == 8.8.3, GHC == 8.6.5, GHC == 8.4.4
 build-type:             Simple
 extra-source-files:     README.md
 
@@ -21,14 +21,14 @@ source-repository head
   type: git
   location: https://github.com/haskell-works/hw-string-parse
 
-common base                 { build-depends: base                 >= 4          && < 5      }
+common base                       { build-depends: base                       >= 4.11       && < 5      }
 
-common doctest              { build-depends: doctest              >= 0.16.2     && < 0.17   }
-common doctest-discover     { build-depends: doctest-discover     >= 0.2        && < 0.3    }
-common QuickCheck           { build-depends: QuickCheck                                     }
-common bytestring           { build-depends: bytestring                                     }
-common hspec                { build-depends: hspec                                          }
-common vector               { build-depends: vector                                         }
+common doctest                    { build-depends: doctest                    >= 0.16.2     && < 0.17   }
+common doctest-discover           { build-depends: doctest-discover           >= 0.2        && < 0.3    }
+common QuickCheck                 { build-depends: QuickCheck                                           }
+common bytestring                 { build-depends: bytestring                                           }
+common hspec                      { build-depends: hspec                                                }
+common vector                     { build-depends: vector                                               }
 
 common config
   default-language:     Haskell2010
