--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,6 +33,14 @@ workflows:
           cabal-build-extra: --write-ghc-environment-files=ghc8.4.4+
           cabal-test-extra: --test-show-details=direct
 
+      - haskell/build-with-binary-cache:
+          name: GHC 8.10.1
+          executor: haskell/ghc-8_10_1
+          context: haskell-ci
+          binary-cache-uri: ${BINARY_CACHE_URI-"http://hw-binary-cache-us-west-2-a.s3-website-us-west-2.amazonaws.com/archive"}
+          cabal-build-extra: --write-ghc-environment-files=ghc8.4.4+
+          cabal-test-extra: --test-show-details=direct
+
       - merge-point/merge-point:
           name: Build Ok
           requires:
