--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -23,7 +23,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - uses: haskell/actions/setup@v1
+      - uses: haskell/actions/setup@v2
         id: setup-haskell
         with:
           ghc-version: ${{ matrix.ghc }}
@@ -59,14 +59,10 @@ jobs:
           skip: "${{ secrets.BINARY_CACHE_URI != '' }}"
 
       - name: Build
-        # Try building it twice in case of flakey builds on Windows
-        run: |
-          cabal build all --enable-tests --enable-benchmarks --write-ghc-environment-files=ghc8.4.4+ || \
-          cabal build all --enable-tests --enable-benchmarks --write-ghc-environment-files=ghc8.4.4+ -j1
+        run: cabal build all --enable-tests --enable-benchmarks
 
       - name: Test
-        run: |
-          cabal test all --enable-tests --enable-benchmarks --write-ghc-environment-files=ghc8.4.4+
+        run: cabal test all --enable-tests --enable-benchmarks
 
   check:
     needs: build
