--- a/hw-string-parse.cabal
+++ b/hw-string-parse.cabal
@@ -25,10 +25,10 @@ common base                       { build-depends: base                       >=
 
 common doctest                    { build-depends: doctest                    >= 0.16.2     && < 0.21   }
 common doctest-discover           { build-depends: doctest-discover           >= 0.2        && < 0.3    }
-common QuickCheck                 { build-depends: QuickCheck                                           }
-common bytestring                 { build-depends: bytestring                                           }
-common hspec                      { build-depends: hspec                                                }
-common vector                     { build-depends: vector                                               }
+common QuickCheck                 { build-depends: QuickCheck                                  < 2.15   }
+common bytestring                 { build-depends: bytestring                                  < 0.12   }
+common hspec                      { build-depends: hspec                                       < 3      }
+common vector                     { build-depends: vector                                      < 0.14   }
 
 common config
   default-language:     Haskell2010
